...

    <!--https://developer.android.com/guide/topics/resources/localization#creating-alternatives-->

    <string name="app_name">Android Sensor Engine</string>

    <!--Navigation Menu String Information-->
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="premium">Premium</string>

    <!--Sensor Select String Information-->
    <string name="sensor_select">Sensor Selection</string>
    <string name="sound_button">Sound Button</string>
    <string name="temp_button">Temp Button</string>
    <string name="light_button">Light Button</string>
    <string name="ram_button">Ram Button</string>
    <string name="battery_button">Battery Button</string>
    <string name="speed_button">Speed Button</string>
    <string name="humidity_button">Humidity Button</string>
    <string name="pressure_button">Pressure Button</string>
    <string name="walk_button">Walk Button</string>
    <string name="ham_icon_black">Black Ham Button</string>
    <string name="ham_icon_white">White Ham Button</string>
    <string name="unsupported_sensor">Your device does not support this sensor</string>

    <!--Individual Sensor Activity String Information-->
    <string name="sound_sensor">Sound Sensor</string>
...
    <string name="notify_air_message">Ambient air temperature has reached</string>
    <string name="notify_battery_message">Your device\'s battery has reached</string>
    <string name="notify_speed_message">Your speed has reached</string>
    <string name="notify_pressure_message">The atmospheric pressure has reached</string>
    <string name="notify_humidity_message">The relative humidity has reached</string>
    <string name="pin_shortut_message">You can pin any sensor to your home screen by long pressing the icon</string>
    <string name="pin_shortcut_title">Quick Sensor Access</string>
    <string name="title_activity_new_home_screen">Sensor Engine</string>
    <string name="information">Information</string>
    <string name="pressure_desc">Barometric pressure, also known as atmospheric pressure, refers to the force exerted on a surface by the weight of the atmosphere above it. It is measured in units such as millibars (mb), inches of mercury (inHg), or pascals (Pa), with the standard atmospheric pressure at sea level being approximately 1013.25 mb, 29.92 inHg, or 101,325 Pa. \n Barometric pressure va
    <string name="battery_desc">One of the useful features of your Android device is its battery temperature sensor. This sensor helps monitor the temperature of your phone\'s battery. If your phone ever becomes to hot you can do things like use a fan to cool it off. Prolonged high battery temperatures can lead to several issues, including reduced battery life, potential damage to internal compone


...
