<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    android:background="@drawable/mainbackground"
    android:fillViewport="true"
    tools:context="com.christianfoulcard.android.androidsensorengine.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sensor_select_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="@font/quantico"
            android:shadowColor="@color/dark_grey"
            android:shadowRadius="8"
            android:text="@string/sensor_select"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.256" />

        <ImageView
            android:id="@+id/sound_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/sound_button"
            android:onClick="soundIconIntent"
            android:transitionName="@string/sound_anim"
            app:layout_constraintEnd_toStartOf="@+id/temp_icon"
            app:layout_constraintTop_toTopOf="@+id/temp_icon"
            app:srcCompat="@drawable/sound_icon" />

        <ImageView
            android:id="@+id/temp_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/temp_button"
            android:onClick="tempIconIntent"
            android:transitionName="@string/temp_anim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_select_text"
            app:srcCompat="@drawable/temp_icon" />

        <ImageView
            android:id="@+id/light_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/light_button"
            android:onClick="lightIconIntent"
            android:transitionName="@string/light_anim"
            app:layout_constraintStart_toEndOf="@+id/temp_icon"
            app:layout_constraintTop_toTopOf="@+id/temp_icon"
            app:srcCompat="@drawable/light_icon" />

        <ImageView
            android:id="@+id/ram_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/ram_button"
            android:onClick="ramIconIntent"
            android:transitionName="@string/ram_anim"
            app:layout_constraintEnd_toStartOf="@+id/battery_icon"
            app:layout_constraintTop_toTopOf="@+id/battery_icon"
            app:srcCompat="@drawable/ram_icon" />

        <ImageView
            android:id="@+id/battery_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/battery_button"
            android:onClick="batteryIconIntent"
            android:transitionName="@string/battery_anim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_icon"
            app:srcCompat="@drawable/battery_icon" />

        <ImageView
            android:id="@+id/speed_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/speed_button"
            android:onClick="speedIconIntent"
            android:transitionName="@string/speed_anim"
            app:layout_constraintStart_toEndOf="@+id/battery_icon"
            app:layout_constraintTop_toTopOf="@+id/battery_icon"
            app:srcCompat="@drawable/speed_icon" />

        <ImageView
            android:id="@+id/humidity_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/humidity_button"
            android:onClick="humidityIconIntent"
            android:transitionName=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/battery_icon"
            app:srcCompat="@drawable/humidity_icon" />

        <ImageView
            android:id="@+id/pressure_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/pressure_button"
            android:onClick="pressureIconIntent"
            app:layout_constraintEnd_toStartOf="@+id/humidity_icon"
            app:layout_constraintTop_toTopOf="@+id/humidity_icon"
            app:srcCompat="@drawable/barometer_icon" />

        <ImageView
            android:id="@+id/walk_icon"
            style="@style/MaterialAnimations"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/walk_button"
            android:onClick="walkIconIntent"
            app:layout_constraintStart_toEndOf="@+id/humidity_icon"
            app:layout_constraintTop_toTopOf="@+id/humidity_icon"
            app:srcCompat="@drawable/walk_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>