<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/gradient_angled"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/quantico"
        android:padding="20dp"
        android:text="@string/step_desc_1"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dismiss_dialog"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@drawable/gradient_grey_black"
        android:fontFamily="@font/quantico"
        android:onClick="closeWalkDialogPopup"
        android:shadowColor="@color/grand_sky_blue"
        android:shadowDx="3"
        android:shadowRadius="6"
        android:text="X"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText" />

</androidx.constraintlayout.widget.ConstraintLayout>